Fixed dark mode

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,92 +1,51 @@
-$background: #222;
-$leftFace: #D53A33;
-$rightFace: #E79C10;
-$topFace: #1d9099;
-$scale: 1;
-$duration: 3s;
-$timingFunction: ease;
-
-.container{
-    margin: 0;
-    position: absolute;
-    top: 44%;
-    left: 78%;
-    transform: translate(-50%, -50%);
-}
-
-.cube {
-    position:absolute;
-    width:86px;
-    height:100px;
-}
-
-.right {
-    background:$rightFace;
-    transform: rotate(-30deg) skewX(-30deg) translate(49px, 65px) scaleY(0.86);
-}
-
-.left {
-    background:$leftFace;
-    transform: rotate(90deg) skewX(-30deg) scaleY(0.86) translate(25px, -50px);
-}
-
-.top {
-    background:$topFace;
-    transform: rotate(210deg) skew(-30deg) translate(-75px, -22px) scaleY(0.86);
-    z-index:2;
-}
-
-.face {
-    height:50px;
-    width:50px;
-    position:absolute;
-    transform-origin: 0 0;
-}
-
-@mixin slice($h, $w, $l) {
-    .h#{$h}.w#{$w}.l#{$l} {
-        z-index: (-#{$h});
-        animation-name: h#{$h}w#{$w}l#{$l};
-        animation-timing-function: $timingFunction;
-        animation-duration: $duration;
-        animation-iteration-count: infinite;
-    }
-    @keyframes h#{$h}w#{$w}l#{$l} {
-        0% {
-            transform:translate(($w * -50% - 50%) + ($l * 50% + 50%), ($h * 50 - 200%) + ($w * 25% - 25%) + ($l * 25 + 25%));
+html{
+    &.dark{
+        input{
+            color-scheme: dark;
         }
-        14% {
-            transform:translate(($w * -50% - 50%) + ($l * 100% - 50%), ($h * 50 - 200%) + ($w * 25% - 25%) + ($l * 50 - 25%));
+        *{
+            scrollbar-width: auto;
+            scrollbar-color: #1f2937 #111827;
         }
-        28% {
-            transform:translate(($w * -100% + 50%) + ($l * 100% - 50%), ($h * 50 - 200%) + ($w * 50% - 75%) + ($l * 50 - 25%));
-        }
-        43% {
-            transform:translate(($w * -100% - 100%) + ($l * 100% + 100%), ($h * 100 - 400%) + ($w * 50% - 50%) + ($l * 50 + 50%));
-        }
-        57% {
-            transform:translate(($w * -100% - 100%) + ($l * 50% + 200%), ($h * 100 - 400%) + ($w * 50% - 50%) + ($l * 25 + 100%));
-        }
-        71% {
-            transform:translate(($w * -50% - 200%) + ($l * 50% + 200%), ($h * 100 - 375%) + ($w * 25% - 25%) + ($l * 25 + 100%));
-        }
-        85% {
-            transform:translate(($w * -50% - 50%) + ($l * 50% + 50%), ($h * 50 - 200%) + ($w * 25% - 25%) + ($l * 25 + 25%));
-        }
-        100% {
-            transform:translate(($w * -50% - 50%) + ($l * 50% + 50%), ($h * 50 - 200%) + ($w * 25% - 25%) + ($l * 25 + 25%));
-        }
-    }
-}
 
-@mixin generateSlice() {
-    @for $i from 1 to 4 {
-        @for $j from 1 to 4 {
-            @for $k from 1 to 4 {
-                @include slice($i, $j, $k);
+        ::-webkit-scrollbar-track {
+            background: #111827;
+        }
+
+        ::-webkit-scrollbar-thumb {
+            background-color: #1f2937;
+            border: 3px solid #111827;
+        }
+        .overflow-x-auto{
+            &::-webkit-scrollbar-track {
+                background-color: #1f2937;
+            }
+            &::-webkit-scrollbar-thumb {
+                background-color: #111827;
+                border: 3px solid #1f2937;
             }
         }
     }
+
+    *{
+        scrollbar-width: auto;
+        scrollbar-color: #e5e7eb #ffffff;
+    }
+    ::-webkit-scrollbar {
+        width: 10px;
+    }
+    ::-webkit-scrollbar-track {
+        background: #ffffff;
+    }
+    ::-webkit-scrollbar-thumb {
+        background-color: #e5e7eb;
+        border-radius: 10px;
+        border: 3px solid #ffffff;
+    }
+}
+.overflow-x-auto{
+    &::-webkit-scrollbar {
+        height: 12px;
+    }
 }
 
-@include generateSlice();
